err/bobtemplates.ecreall.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/bobtemplates'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/buildout.d'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/docs'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/browser'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/browser/static'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/content'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/locales'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/locales/fr'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/profiles'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/profiles/default'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/profiles/testing'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/tests'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon/src/+package.namespace+/+package.name+/tests/robot'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/buildout.d'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/docs'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/src'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/src/+package.namespace+'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/src/+package.namespace+/+package.namespace2+'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/src/+package.namespace+/+package.namespace2+/+package.name+'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/src/+package.namespace+/+package.namespace2+/+package.name+/browser'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/src/+package.namespace+/+package.namespace2+/+package.name+/content'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/src/+package.namespace+/+package.namespace2+/+package.name+/locales'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/src/+package.namespace+/+package.namespace2+/+package.name+/profiles'...
Listing './lib/python3.5/site-packages/bobtemplates/plone_addon_nested/src/+package.namespace+/+package.namespace2+/+package.name+/tests'...
Listing './lib/python3.5/site-packages/bobtemplates.ecreall-0.6.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mr.bob-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/mrbob'...
Listing './lib/python3.5/site-packages/mrbob/template_sample'...
Listing './lib/python3.5/site-packages/mrbob/template_starter'...
Listing './lib/python3.5/site-packages/mrbob/tests'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/ask_hooks'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/ds_store'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/empty'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/empty2'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/encodingč'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/encodingč/mapča'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/encodingč'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/encodingč/mapča'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/ignored'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/ignored_dirs'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/ignored_dirs/ignored'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/ignored_dirs/ignored/ignored_subdir'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/ignored_dirs/ignored_stuff'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/ignored_dirs/not_ignored'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/missing_namespace_key'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/multiconfig'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/questions1'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/questions2'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/questions3'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/questions4'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/questions5'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/renamed'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/renamed/+module+parts'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/renamed/+module+parts/+name+_etc'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/renamedfile'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/renamedir'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/renamedir/parts+name+'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/renamedtemplate'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/renamedtemplate2'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/render_hooks'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/renderer'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/skip_mrbobini'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/unbound'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/unbound/etc'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/unbound/usr'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/unbound/usr/local'...
Listing './lib/python3.5/site-packages/mrbob/tests/templates/unbound/usr/local/etc'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
